--- a/Gemini.Modules.Utils/Gemini.Modules.Utils.csproj
+++ b/Gemini.Modules.Utils/Gemini.Modules.Utils.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net7.0-windows</TargetFrameworks>
@@ -9,5 +9,6 @@
   <ItemGroup>
     <PackageReference Include="Caliburn.Micro.Core" Version="4.0.210" />
     <PackageReference Include="Gu.Localization" Version="6.7.0" />
+    <PackageReference Include="LiteDB" Version="5.0.16" />
   </ItemGroup>
 </Project>
